feat : "Tip Calculator" tutorial
Build an activity for calculating tips

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Compose Playground</string>
+
+    <string name="tip_calculator_title">Calculate tip</string>
+    <string name="hint_cost_of_service">Cost of service</string>
+    <string name="tip_amount">Tip amount : %s</string>
 </resources>
